--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,26 +1,21 @@
 [all]
-# node1 ansible_host=95.54.0.12 # etcd_member_name=etcd1 container_manager=containerd
-# node2 ansible_host=95.54.0.13 
-# node3 ansible_host=95.54.0.14 
-# node4 ansible_host=95.54.0.15 
-# node5 ansible_host=95.54.0.16 
+node1 ansible_host=18.116.27.74  ip=10.0.101.89 etcd_member_name=etcd1
+node2 ansible_host=18.222.163.210  ip=10.0.101.120
+node3 ansible_host=3.15.142.238  ip=10.0.101.135
 
-[kube_control_plane] 
-# node1
+[kube_control_plane]
+node1
 
-[etcd] 
-# node1
+[etcd]
+node1
 
-[kube_node] 
-# node2
-# node3
-# node4
-# node5 
-# node6
+[kube_node]
+node2
+node3
 
 [calico_rr]
 
-[k8s_cluster:children] 
-kube_control_plane 
+[k8s_cluster:children]
+kube_control_plane
 kube_node
 calico_rr
